crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__bond-2.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: residue_not_in_polymer
expression: out
---
  × failed to form "Stem" bond between residue 1 (N-Acetylmuramic Acid) and
  │ residue 2 (Alanine) due to an issue with the donor
  ╰─▶   × residue 1 does not belong to the current polymer
        help: the referenced residue was likely created by a different
              Polymerizer instance
