crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__bond-4.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: nonexistent_bond
expression: out
---
  × the bond kind "Super" could not be found in the supplied polymer database
