crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__bond.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: all_groups_occupied
expression: out
---
  × failed to form "Stem" bond between residue 1 (N-Acetylmuramic Acid) and
  │ residue 2 (Alanine) due to an issue with the donor
  ╰─▶   × no functional groups on residue 1 matching the target were free:
        │ "Carboxyl" at="Lactyl Ether" is a donor
