crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__chain-2.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: nonexistent_bond
expression: out
---
  × the bond kind "?" could not be found in the supplied polymer database
