crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__chain-3.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: nonexistent_residue
expression: out
---
  × the residue "?" could not be found in the supplied polymer database
