crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_free_group-4.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: no_matching_groups
expression: out
---
  × no functional groups on residue 1 matched the target "Amino" or "Crazy"
