crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_free_group-6.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: group_occupied
expression: out
---
  × the functional group "Hydroxyl" at="Nonreducing End" of residue 1 was
  │ already an acceptor, but must be free
