crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_free_group-8.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: nonexistent_group
expression: out
---
  × the functional group "Hydroxyl" at="Nonreducing End" does not exist on
  │ residue 1
